fix counter-reset to work on firefox

--- a/style.css
+++ b/style.css
@@ -70,8 +70,7 @@ form {
   display: grid;
   gap: 1ch;
 
-  counter-reset: correct;
-  counter-reset: questions;
+  counter-reset: correct questions;
 }
 
 form fieldset {
